# SunTzu

./: .gcloudignore  .gitignore  EVALUATION_HARNESS_ANALYSIS.md  PLAN.md  README.md  app.py  app.yaml  config.json  config.json.backup  iterate_score.py  map_gen.py  models.py  orders.py  play_cli.py  pyproject.toml  requirements.txt  resolution.py  state.py  test_confrontation.py  test_confrontation_direct.py  upkeep.py
.github/workflows/: ci.yml
benchmark/: __init__.py  baselines.py  comprehension.py  extraction.py  integrity.py  llm_agent.py  llm_agent_interface.py  metrics.py  providers.py  renderers.py  runner.py  telemetry.py
docs/: api_endpoints.md  architecture.md  documentation_updates.md  gdd_reference.md  goodharts-law-analysis.md  repo-analysis.md  v10-balance-diagnosis.md  v10-benchmark-design.md  v10-plan.md
tests/: conftest.py  simulate.py  strategies_advanced.py  test_api.py  test_baselines.py  test_benchmark.py  test_comprehension.py  test_confrontation.py  test_confrontation_direct.py  test_depth_score.py  test_extraction.py  test_fun_score.py  test_gameplay.py  test_harness_integration.py  test_integrity.py  test_map_gen.py  test_meditate_upkeep.py  test_models.py  test_narrative_score.py  test_orders.py  test_renderers.py  test_resolution.py  test_state.py  test_upkeep.py
